fixed spacing

--- a/index.css
+++ b/index.css
@@ -1,4 +1,11 @@
-#typing { color:#0B5345; text-decoration: none; font-weight: normal; font-size: 25px;}
+#typing { 
+    color:#0B5345; 
+    text-decoration: none; 
+    font-weight: normal; 
+    font-size: 25px;
+    text-align: center;
+    margin-top: 270px;
+}
 
 #body {
 background-color: #EAFAF1;
@@ -12,15 +19,16 @@ position: relative;
 }
 
 #logo{
-    margin-left: 35%;
+    margin-left: 33%;
     float: left;
     padding-bottom: 20px;
 }
 
 #header h1{
     float: left;
-    padding-top: 20px;
+    padding-top: 15px;
     margin-left: 30px;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
 
 /*set navbar color*/
@@ -60,9 +68,6 @@ hr {
     border-color: rgba(31,85,74,1);
     height: .5px;
 }
-#content{
-padding-left: 10px;
-}
 
 #info {
 left: 54px;
@@ -78,16 +83,19 @@ font-style: normal;
 font-weight: bold;
 color: rgba(31,85,74,1);
 }
+
 #info p{
 font-size: 50px;
+font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
+
 #main{
 width:600px;
 float: right;
 color: #0B5345 ;
 font-size: xx-large;
 padding-right: 50px;
-padding-top: 25px;
+padding-top: 30px;
 
 }
 /*puts each line on top of each other*/
@@ -95,20 +103,14 @@ padding-top: 25px;
 display: block;
 }
 
-#main textarea{
-width: 550px;
-height: 400px;
-font-size: x-large;
-border: rgba(31,85,74,1) 5px solid;
-}
 
 #scanning{
 background-color: #1F554A;
 color: white;
 border: none;
 padding: 10px 15px;
-margin-top: 330px;
-margin-left: 625px;
+margin-top: 20px;
+margin-left: 635px;
 width: 175px;
 font-style: GT Flexa VAR;
 border-radius: 20px;
